courses/430_programming-languages/assignment-5/tests/error/error13.sml
val prog =
  PROGRAM {decls=[],func_decls=[],stmts=[ST_RETURN {exp=SOME (EXP_NUM 2)}]}
  : program
;
